<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
       app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texthello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:text = "Jp"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/texthello"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/imagemenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/texthello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/texthello"/>


</androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutheader">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutqrcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_bg"
               app:layout_constraintEnd_toStartOf="@id/layoutnotify"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/qrcode"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/qrcode"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutnotify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_rectangle_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutqrcode"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/notify" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notify"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/seat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/white_rectangle_bg"
            app:layout_constraintEnd_toStartOf="@id/layoutnotify"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutqrcode">



            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/seat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/seats"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
        android:id="@+id/notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintStart_toEndOf="@id/layoutqrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutnotify">



        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/notes"
            android:padding="8dp"
            android:src="@drawable/notes"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/white_rectangle_bg"
            app:layout_constraintEnd_toStartOf="@id/layoutnotify"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seat">



            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/Aboutus"
                android:padding="8dp"
                android:src="@drawable/aboutus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="About Us"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/white_rectangle_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toEndOf="@id/layoutqrcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/notes"
                android:padding="8dp"
                android:src="@drawable/profile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>